--- a/css/externalCSS.css
+++ b/css/externalCSS.css
@@ -62,6 +62,12 @@ header{
 #certificates{
     background-color: #393646;
 }
-.cert_container{
+/* .certificate_img{
     height: 500px;
+} */
+.certificate_label{
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6));
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
