--- a/css/externalCSS.css
+++ b/css/externalCSS.css
@@ -7,6 +7,7 @@ header{
     background-image: url('../images/leone-venter-VieM9BdZKFo-unsplash.jpg');
     background-position: top;
     background-size: cover; 
+    background-attachment: fixed;
 }
 #header_container{
     background-color: rgba(248, 249, 250, 0.6);
@@ -66,8 +67,28 @@ header{
     height: 500px;
 } */
 .certificate_label{
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6));
+    /* background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.6)); */
+    background-color: rgba(0, 0, 0, 0.6);
     bottom: 0;
     left: 0;
     right: 0;
+}
+#portfolio{
+    height: 500px;
+    background-color: #f4f4f4;
+}
+#contact{
+    background-color: #c1b6c8;
+}
+.links{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.links > li{
+    margin: 10px 0;
+}
+#footer{
+    background-color: #393646;
+    height: 50px;
 }
